--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -320,6 +320,34 @@
 
 @article
 {
+	McStas2020,
+	author = {Willendrup, Peter Kj\ae{}r and Lefmann, Kim},
+	title = {{McStas (i): Introduction, Use, and Basic Principles for Ray-tracing Simulations}},
+	year = {2020},
+	journal = {Journal of Neutron Research},
+	volume = {22},
+	number = {1},
+	pages = {1-16},
+	doi = {10.3233/JNR-190108},
+}
+
+
+@article
+{
+	McStas2021,
+	author = {Willendrup, Peter Kj\ae{}r and Lefmann, Kim},
+	title = {{McStas (ii): An Overview of Components, Their Use, and Advice for User Contributions}},
+	year = {2021},
+	journal = {Journal of Neutron Research},
+	volume = {23},
+	number = {1},
+	pages = {7-27},
+	doi = {10.3233/JNR-200186},
+}
+
+
+@article
+{
 	Takin2021,
 	title = {{Update 2.0 to ``Takin: An open-source software for experiment planning, visualisation, and data analysis'', (PII: S2352711016300152)}},
 	journal = {SoftwareX},
