--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -8,7 +8,7 @@
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
 
-The triple-axis spectrometer (TAS) \cite{Shirane2002} was invented by B. Brockhouse in the 1950s and 
+The triple-axis spectrometer (TAS) \cite{Shirane2002} was invented by Bertram Brockhouse in the 1950s and
 is among the foremost measurement methods in the field of inelastic neutron scattering. 
 It enables the probing of vibrational (phonon) or magnetic (magnon) excitations in single-crystals and allows 
 mappings of their dispersion relations, i.e. their energy-momentum relation, $E\left( \underline{Q} \right)$.
@@ -32,9 +32,9 @@ not every $\left( \underline{Q}, E \right)$ coordinate point is accessible, and 
 usually required beforehand to avoid collisions of the instrument with walls, collisions with itself or movements
 which could pull out fragile cables.
 
-The goal of the proposed project is the development and implementation of a path-finding algorithm for 
+The goal this work was the development and implementation of a path-finding algorithm for
 neutron triple-axis spectrometers. Given a user-selected target coordinate in reciprocal crystal space, 
-the algorithm will be able to navigate the instrument in its constrained angular space. The problem is similar to 
+the algorithm is able to navigate the instrument in its constrained angular space. The problem is similar to
 moving a robot arm around obstacles, with the addition of having the start and target coordinates in a 
 coordinate system with a different metric.
 
