--- a/tex/xtal.tex
+++ b/tex/xtal.tex
@@ -10,18 +10,37 @@
 \chapter{Crystal and Instrument Coordinate Systems}
 \label{ch:xtal}
 
-In this chapter we review the theory for conversion between crystal coordinates and scattering angles at the triple-axis instrument. Section \ref{sec:xtalcoords} introduces crystal coordinates and the so-called UB matrix formalism, section \ref{sec:tasangles} calculates the corresponding TAS angles. Note this chapter has been published in the manual of the software from Ref. \cite{Takin2021} and is based on an earlier version of these derivations from my (physics) PhD thesis \cite[pp. 139-143]{PhDWeber}.
+In this chapter we review the theory for conversion between crystal coordinates and scattering angles 
+at the triple-axis instrument. Section \ref{sec:xtalcoords} introduces crystal coordinates and the so-called 
+$UB$ matrix formalism, section \ref{sec:tasangles} calculates the corresponding TAS angles. 
+These are the calculations that the control programs of triple-axis instruments typically use, they
+can, for example, be found in \textit{NOMAD} \cite{web_NOMAD} or \textit{NICOS} \cite{web_NICOS},
+but are also employed in virtual instrument simulators like \textit{vTAS} \cite{vTAS2013} or 
+\textit{McStas} \cite{McStas2020}.
+
+Note that this chapter has already been published in the manual of the software from Ref. \cite{Takin2021}
+and is furthermore based on an earlier version of these derivations from my (physics) PhD thesis 
+\cite[pp. 139-143]{PhDWeber}. Originally, these formula were derived with the aid of the source
+code of \textit{McStas'} \textit{templateTAS} virtual instrument \cite{McStas2020, TODO}.
 
 
 % ------------------------------------------------------------------------------------------------------------------------------------
 \section{Fractional crystal coordinates \label{sec:xtalcoords}}
 
-We begin by presenting the so-called $UB$ matrix formalism to convert between relative lattice units of a crystal and laboratory coordinates used in instrument space. This method has been described in \cite{Lumsden2005}. The derivation of the transformation matrices, $A$ and $B$, describing fractional crystal coordinates, can be found in \cite{wiki_fractional}, which we follow here.
+We begin by presenting the so-called $UB$ matrix formalism to convert between relative lattice units 
+of a crystal and laboratory coordinates used in instrument space. This method has been described in 
+\cite{Lumsden2005}. The derivation of the transformation matrices, $A$ and $B$, describing fractional 
+crystal coordinates, can be found in \cite{wiki_fractional}, which we follow here.
 
 \subsection{$A$ and $B$ matrices}
-The unit cell of the crystal is spanned by its three basis vectors $\left| a \right>$, $\left| b \right>$, and $\left| c \right>$, which -- in general -- are not perpendicular to one another, but instead enclose angles of $\alpha$, $\beta$, and $\gamma$, respectively, as shown in Fig. \ref{fig:cell}. 
-To calculate the crystallographic $A$ matrix which transforms non-orthogonal crystal to orthogonal lab units, we first need to reduce the number of parameters.
-The respective relations between the basis vectors and their angles can be directly obtained via the cosine theorem:
+\paragraph{Real-space crystal lattice}
+The unit cell of the crystal is spanned by its three basis vectors $\left| a \right>$, $\left| b \right>$, and $\left| c \right>$, 
+which -- in general -- are not perpendicular to one another, but instead enclose angles of $\alpha$, $\beta$, 
+and $\gamma$, respectively, as shown in Fig. \ref{fig:cell}. 
+To calculate the crystallographic $A$ matrix which transforms non-orthogonal crystal to orthogonal lab units, 
+we first need to reduce the number of parameters.
+The respective relations between the basis vectors and their angles can be directly obtained via the cosine 
+theorem:
 \begin{equation} \left< a | b \right > \ =\  ab \cos \gamma, \label{ab} \end{equation}
 \begin{equation} \left< a | c \right > \ =\  ac \cos \beta, \label{ac} \end{equation}
 \begin{equation} \left< b | c \right > \ =\  bc \cos \alpha. \label{bc} \end{equation}
@@ -38,8 +57,11 @@ The respective relations between the basis vectors and their angles can be direc
 
 %\subsection*{Basis vectors}
 
-The next goal is to explicitly write the components of the vectors $\left| a \right>$, $\left| b \right>$, and $\left| c \right>$ in terms of their (scalar) lengths $a = \sqrt{\left< a | a \right>}$, $b = \sqrt{\left< b | b \right>}$, $c = \sqrt{\left< c | c \right>}$, and the three angles.
-To that end, we first choose -- without loss of generality -- $\left| a \right>$ along the $x$ axis, $\left| b \right>$ in the $xy$ plane, and $\left| c \right>$ in general:
+The next goal is to explicitly write the components of the vectors $\left| a \right>$, $\left| b \right>$, and $\left| c \right>$ 
+in terms of their (scalar) lengths $a = \sqrt{\left< a | a \right>}$, $b = \sqrt{\left< b | b \right>}$, $c = \sqrt{\left< c | c \right>}$, 
+and the three angles.
+To that end, we first choose -- without loss of generality -- $\left| a \right>$ along the $x$ axis, $\left| b \right>$ in the 
+$xy$ plane, and $\left| c \right>$ in general:
 \begin{equation} 
 	\boxed{ \left| a \right> \ =\  \left( \begin{array}{c} a_1 = a \\ 0 \\ 0 \end{array} \right), }
 	\hspace{0.5cm} \left| b \right> \ =\  \left( \begin{array}{c} b_1 \\ b_2 \\ 0 \end{array} \right),
@@ -95,7 +117,8 @@ The last component, $c_3$, can be obtained from the vector length normalisation,
 
 
 
-The crystallographic $A$ matrix, which transforms real-space fractional to lab coordinates (\AA), is formed with the basis vectors in its columns:
+The crystallographic $A$ matrix, which transforms real-space fractional to lab coordinates (\AA), 
+is formed with the basis vectors in its columns:
 \begin{equation}
 	A \ =\  \left(
 		\begin{array}{ccc}
@@ -121,10 +144,13 @@ Explicitly written out using the basis vectors, the matrix reads \cite{wiki_frac
 \end{equation}
 
 
-The $B$ matrix, which transforms reciprocal-space relative lattice units (rlu) to lab coordinates (1/\AA), is \cite[p. 60]{Gross2012}:
+\paragraph{Reciprocal-space crystal lattice}
+The $B$ matrix, which transforms reciprocal-space relative lattice units (rlu) to lab coordinates 
+(1/\AA), is \cite[p. 60]{Gross2012}:
 \begin{equation} B \ =\  2 \pi A^{-t}, \end{equation}
 where $-t$ denotes the transposed inverse.
-We can now also determine the metric tensor corresponding to the coordinate system defined by the $B$ transformation matrix, it reads \cite[p. 808]{Arens2015}:
+We can now also determine the metric tensor corresponding to the coordinate system defined by 
+the $B$ transformation matrix, it reads \cite[p. 808]{Arens2015}:
 \begin{equation}
 	\left(g_{ij}\right) \ =\  \left<\underline{b}_i | \underline{b}_j \right> \ =\  B^T B,
 \end{equation}
@@ -133,37 +159,44 @@ where the reciprocal basis vectors $\left| \underline{b}_i \right>$ form the col
 
 \subsection{Example: lengths and angles in the reciprocal lattice}
 Having a metric makes it straightforward to calculate lengths and angles.
-The length of a reciprocal lattice vector $\left| G \right>$ seen from the lab system is (in 1/\AA{} units) \cite[p. 808]{Arens2015}:
+The length of a reciprocal lattice vector $\left| G \right>$ seen from the lab system is 
+(in 1/\AA{} units) \cite[p. 808]{Arens2015}:
 \begin{equation}
 	\left\Vert \left< G | G \right> \right\Vert \ =\  \sqrt{\left< G | G \right>} \ =\  \sqrt{G_i G^i} \ =\  \sqrt{g_{ij} G^i G^j}.
 \end{equation}
-The angle $\theta$ between two Bragg peaks $\left| G \right>$ and $\left| H \right>$ is given by their dot product \cite[p. 808]{Arens2015}:
+The angle $\theta$ between two Bragg peaks $\left| G \right>$ and $\left| H \right>$ 
+is given by their dot product \cite[p. 808]{Arens2015}:
 \begin{equation}
 	\frac{\left< G | H \right>}{\left\Vert \left< G | G \right> \right\Vert \cdot \left\Vert \left< H | H \right> \right\Vert} \ =\  
 	\frac{g_{ij} G^i H^j }{\sqrt{g_{ij} G^i G^j} \sqrt{g_{ij} H^i H^j}} \ =\  \cos \theta.
 \end{equation}
 
-Please note that if an index appears twice, both as subscript as well as a superscript, a summation over it is implied, see Ref. \cite{wiki_summation}.
+Please note that if an index appears twice, both as subscript as well as a superscript, 
+a summation over it is implied, see Ref. \cite{wiki_summation}.
 
 
 \subsection{$U$ matrix}
-The $B$ matrix alone yields the transformation from the non-orthogonal and reciprocal crystal coordinate system into the orthogonal lab units.
-However, it does not yet take into account the actual rotation of the crystal so that a specific plane, the so-called scattering plane, 
-can be accessed by the two-dimensional movements of the instrument. 
-Such a rotation is performed by the $U$ matrix, whose rows contain two vectors inside the desired scattering plane and the plane normal. 
-These basis vectors are usually chosen along two orientation Bragg reflections and are expressed in the orthogonal lab system, i.e. they are
+The $B$ matrix alone yields the transformation from the non-orthogonal and reciprocal crystal 
+coordinate system into the orthogonal lab units.
+However, it does not yet take into account the actual rotation of the crystal so that a specific plane, 
+the so-called scattering plane, can be accessed by the two-dimensional movements of the instrument. 
+Such a rotation is performed by the $U$ matrix, whose rows contain two vectors inside the desired 
+scattering plane and the plane normal. 
+These basis vectors are usually chosen along two orientation Bragg reflections and are expressed 
+in the orthogonal lab system, i.e. they are
 pre-multiplied by $B$.
-For $U$ to be a rotation matrix, these basis vectors are normalised using, for instance, the Gram-Schmidt algorithm \cite[p. 744]{Arens2015} or 
-QR decomposition \cite[pp. 269-272]{Scarpino2011}.
+For $U$ to be a rotation matrix, these basis vectors are normalised using, for instance, the 
+Gram-Schmidt algorithm \cite[p. 744]{Arens2015} or QR decomposition \cite[pp. 269-272]{Scarpino2011}.
 
-In summary, a coordinate point $\left|Q_{\mathrm{rlu}}\right>$, which is given in relative lattice units of the reciprocal crystal, 
+In summary, a coordinate point $\left|Q_{\mathrm{rlu}}\right>$, which is given in relative lattice 
+units of the reciprocal crystal, 
 is transformed by the $B$ matrix into the orthogonal lab units used at the instrument. 
 It is then rotated by the $U$ matrix to account for the actual crystal orientation:
 \begin{equation}
 	\left|Q_{\mathrm{lab}}\right> \ =\  U \cdot B \cdot \left|Q_{\mathrm{rlu}}\right>.
 \end{equation}
-In the rest of this work we will not use the $U$ matrix explicitly, though, but instead directly work with its basis vectors.
-This is just a formality though, the mathematics are the same.
+In the rest of this work we will not use the $U$ matrix explicitly, though, but instead directly work 
+with its basis vectors. This is just a formality though, the mathematics are the same.
 
 % ------------------------------------------------------------------------------------------------------------------------------------
 
@@ -173,12 +206,17 @@ This is just a formality though, the mathematics are the same.
 % ------------------------------------------------------------------------------------------------------------------------------------
 \section{Scattering triangle and TAS angles \label{sec:tasangles}}
 
-With the metric tensor of the crystal coordinate system, we can now calculate the scattering angles $2 \theta_M$, $2 \theta_S$, and $2 \theta_A$ from the monochromator, sample and analyser, respectively. The derivation of basic scattering geometries in triple-axis spectrometers can be found in \cite[Ch. 1.3]{Shirane2002}.
+With the metric tensor of the crystal coordinate system, we can now calculate the scattering angles 
+$2 \theta_M$, $2 \theta_S$, and $2 \theta_A$ from the monochromator, sample and analyser, respectively. 
+The derivation of basic scattering geometries in triple-axis spectrometers can be found in \cite[Ch. 1.3]{Shirane2002}.
 
-For the monochromator and analyser, the crystal angles $\theta_M$ and $\theta_A$ are coupled to their scattering angles, they are simply half their value. 
-The crystal rotation for the sample is not necessarily half its scattering angle, $\Theta_S \ne 2\theta_S/2$, though, because the instrument can be freely positioned at any point of reciprocal crystal space.
+For the monochromator and analyser, the crystal angles $\theta_M$ and $\theta_A$ are coupled to 
+their scattering angles, they are simply half their value. 
+The crystal rotation for the sample is not necessarily half its scattering angle, $\Theta_S \ne 2\theta_S/2$, 
+though, because the instrument can be freely positioned at any point of reciprocal crystal space.
 
-The monochromator and analyser scattering angles follow directly from Bragg's equation \cite[p. 68]{Gross2012} \cite[p. 13]{Shirane2002}:
+The monochromator and analyser scattering angles follow directly from Bragg's equation 
+\cite[p. 68]{Gross2012} \cite[p. 13]{Shirane2002}:
 
 \begin{minipage}{0.45\textwidth}
 	\centering
@@ -195,9 +233,15 @@ The monochromator and analyser scattering angles follow directly from Bragg's eq
 
 \vspace{0.5cm}
 
-To determine the sample scattering angle $2 \theta_S$, we use the scattering triangle, see Fig. \ref{fig:scattering_triangle}. 
+To determine the sample scattering angle $2 \theta_S$, we use the scattering triangle, see 
+Fig. \ref{fig:scattering_triangle}. 
 The scattering triangle can be directly determined by the angles the instrument is positioned at. 
-For that, we have a look at the incoming and final neutron wavevectors $\left| k_i \right>$ and $\left| k_f \right>$, whose directions (but not lengths!) correspond directly to the neutron paths before and after the sample, respectively, as shown on the left-hand side of Fig. \ref{fig:scattering_triangle}. We can rearrange them so that their tips meet, as depicted on the right-hand side of Fig. \ref{fig:scattering_triangle}, where the scattering triangle is formed together scattering vector $\left| Q \right> = \left| k_i \right> - \left| k_f \right>$. Here, the two wavevectors enclose the scattering angle $2 \theta_S$.
+For that, we have a look at the incoming and final neutron wavevectors $\left| k_i \right>$ and $\left| k_f \right>$, 
+whose directions (but not lengths!) correspond directly to the neutron paths before and after the sample, 
+respectively, as shown on the left-hand side of Fig. \ref{fig:scattering_triangle}. We can rearrange them so 
+that their tips meet, as depicted on the right-hand side of Fig. \ref{fig:scattering_triangle}, where the 
+scattering triangle is formed together scattering vector $\left| Q \right> = \left| k_i \right> - \left| k_f \right>$. 
+Here, the two wavevectors enclose the scattering angle $2 \theta_S$.
 
 \begin{figure}
 	\begin{center}
@@ -232,9 +276,12 @@ The sign of $2 \theta_S$ is given by the sample scattering sense $\sigma_s = \pm
 
 
 The final and most complicated angle to determine is the sample rotation $\Theta_S$.
-It is given by the angle of the incoming wavevector $\left| k_i \right>$ to an (arbitrary) direction $\left| a \right>$ which is known from sample orientation, this is usually a Bragg peak. If we were to explicitly use the $U$ matrix here, this vector would be one of its rows.
+It is given by the angle of the incoming wavevector $\left| k_i \right>$ to an (arbitrary) direction 
+$\left| a \right>$ which is known from sample orientation, this is usually a Bragg peak. 
+If we were to explicitly use the $U$ matrix here, this vector would be one of its rows.
 The situation is shown in the right panel of Fig. \ref{fig:scattering_triangle}.
-We split $\Theta_S$ into the angle $\psi$ between $\left| k_i \right>$ and $\left| Q \right>$ and the angle $\xi$ between $\left| k_i \right>$ and $\left| a \right>$:
+We split $\Theta_S$ into the angle $\psi$ between $\left| k_i \right>$ and $\left| Q \right>$ 
+and the angle $\xi$ between $\left| k_i \right>$ and $\left| a \right>$:
 \begin{equation} \boxed{ \Theta_S \ =\  180^{\circ} - \left( \psi + \xi \right) } \end{equation}
 
 
@@ -262,8 +309,10 @@ The angle $\psi$ between $\left| k_i \right>$ and $\left| Q \right>$ is determin
 \vspace{0.5cm}
 
 
-The angle $\xi$ between $\left| Q \right>$ and orientation vector $\left| a \right>$ is also determined from the properties of the scalar product.
-Here we have to use the covariant form, because $\left| a \right>$ is a coordinate in crystal space naming a Bragg reflection, while $\left| Q \right>$ lives, as before in instrument space.
+The angle $\xi$ between $\left| Q \right>$ and orientation vector $\left| a \right>$ is also determined 
+from the properties of the scalar product.
+Here we have to use the covariant form, because $\left| a \right>$ is a coordinate in crystal space 
+naming a Bragg reflection, while $\left| Q \right>$ lives, as before in instrument space.
 \begin{equation} 
 	\boxed{ \xi \ =\  
 \sigma_{\mathrm{side}} \cdot \arccos \left( \frac{ \left< Q | a \right> }{ \sqrt{\left< Q | Q \right>} \sqrt{\left< a | a \right>} } \right) \ =\  
@@ -271,13 +320,17 @@ Here we have to use the covariant form, because $\left| a \right>$ is a coordina
 \label{eq:xi}
 \end{equation}
 
-The sign, $\sigma_{\mathrm{side}}$, of $\xi$ depends on which side of the orientation vector $\left| a \right>$ the scattering vector $\left| Q \right>$ is located. 
-The sign can be found by calculating the (covariant) cross product of $\left| a \right>$ and $\left| Q \right>$ to give an out-of-plane vector $\left| x \right>$ which can be compared with the given scattering plane up vector.
+The sign, $\sigma_{\mathrm{side}}$, of $\xi$ depends on which side of the orientation vector 
+$\left| a \right>$ the scattering vector $\left| Q \right>$ is located. 
+The sign can be found by calculating the (covariant) cross product of $\left| a \right>$ and 
+$\left| Q \right>$ to give an out-of-plane vector $\left| x \right>$ which can be compared with 
+the given scattering plane up vector.
 The covariant cross-product is calculated as \cite[p. 815]{Arens2015}:
 \begin{equation}
 	x^l \ =\  g^{li} \epsilon_{ijk} a^j Q^k,
 \end{equation}
-where $\epsilon_{ijk}$ is the general Levi-Civita symbol formed from the determinant of the basis vectors $\left| \underline{b}_i \right>$, see Ref. \cite[p. 815]{Arens2015}:
+where $\epsilon_{ijk}$ is the general Levi-Civita symbol formed from the determinant of the 
+basis vectors $\left| \underline{b}_i \right>$, see Ref. \cite[p. 815]{Arens2015}:
 \begin{equation}
 	\epsilon_{ijk} \ =\  \left|
 		\begin{array}{ccc} \left| 
@@ -288,7 +341,8 @@ where $\epsilon_{ijk}$ is the general Levi-Civita symbol formed from the determi
 
 
 \paragraph*{Special case}
-For cubic crystals with $\alpha = \beta = \gamma = 90^{\circ}$ and the lattice constants all equal, $a = b = c$, the metric tensor is diagonal, $g_{ij} = \delta_{ij} \cdot \left( 2\pi / a \right)^2$.
+For cubic crystals with $\alpha = \beta = \gamma = 90^{\circ}$ and the lattice constants all equal, 
+$a = b = c$, the metric tensor is diagonal, $g_{ij} = \delta_{ij} \cdot \left( 2\pi / a \right)^2$.
 With that, Eq. \ref{eq:xi} simplifies to:
 \begin{equation}
 	\xi \ =\  \sigma_{\mathrm{side}} \cdot \arccos \left( \frac{ Q_i a^i }{ \sqrt{Q_i Q^i} \sqrt{a_i a^i} } \right).
