--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -112,7 +112,7 @@ interface described in section \ref{sec:scripting}, or the raw \textit{C++} libr
 \begin{wrapfigure}{r}{0.46 \textwidth}
 	\vspace{-0.25cm}
 	\includegraphics[width = 0.45 \textwidth]{figures/gui_xtal}
-	\caption[Crystal definition window]{Crystal definition window (a).
+	\caption[Crystal definition window.]{Crystal definition window (a).
 		\label{fig:gui_xtal}}
 \end{wrapfigure}
 
@@ -139,7 +139,7 @@ in the floating window right of (a).
 \begin{wrapfigure}{l}{0.3 \textwidth}
 	\vspace{-0.25cm}
 	\includegraphics[width = 0.25 \textwidth]{figures/gui_instrument}
-	\caption[Instrument properties window]{Instrument properties window (b).
+	\caption[Instrument properties window.]{Instrument properties window (b).
 		\label{fig:gui_instr}}
 \end{wrapfigure}
 
@@ -227,7 +227,7 @@ property from the main \lstinline[language=C++]|InstrumentSpace| instance.
 \begin{wrapfigure}{r}{0.26 \textwidth}
 	\vspace{-0.25cm}
 	\includegraphics[width = 0.25 \textwidth]{figures/gui_xtalcoords}
-	\caption[Crystal coordinates window]{Crystal coordinates window (d).
+	\caption[Crystal coordinates window.]{Crystal coordinates window (d).
 		\label{fig:gui_xtalcoords}}
 \end{wrapfigure}
 
@@ -263,7 +263,7 @@ sets the target position on the instrument path.
 \begin{wrapfigure}{l}{0.26 \textwidth}
 	\vspace{-0.25cm}
 	\includegraphics[width = 0.25 \textwidth]{figures/gui_path}
-	\caption[Path properties window]{Path properties window (e).
+	\caption[Path properties window.]{Path properties window (e).
 		\label{fig:gui_path}}
 \end{wrapfigure}
 
